Add defer inside js script calling

--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>LibraryJS</title>
 </head>
 <body>
-    <section>CIAOO</section>
+    <section id="library">
+        <div class="card">
+            <div class="card-item">title</div>
+            <div class="card-item">author</div>
+            <div class="card-item">pages</div>
+            <div class="card-item">read</div>
+            <div class="card-item">remove</div>
+        </div>
+        <div class="card">
+            <div class="card-item">title</div>
+            <div class="card-item">author</div>
+            <div class="card-item">pages</div>
+            <div class="card-item">read</div>
+            <div class="card-item">remove</div>
+        </div>
+        <div class="card">
+            <div class="card-item">title</div>
+            <div class="card-item">author</div>
+            <div class="card-item">pages</div>
+            <div class="card-item">read</div>
+            <div class="card-item">remove</div>
+        </div>
+    </section>
 </body>
 </html>
