--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>LibraryJS</title>
 </head>
 <body>
-    <section id="library">
+    <section class="library">
         <div class="card">
             <div class="card-item">title</div>
             <div class="card-item">author</div>
