Add button to insert a new book

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>LibraryJS</title>
 </head>
 <body>
+    <div class="button-container">
+        <div class="button" id="addBtn">+Add Book</div>
+    </div>
     <section class="library">
     </section>
 </body>
